# serde-self-describing-formats

./: Cargo.toml  README.md
src/: formats.rs  lib.rs  roundtrip.rs  schema_evolution.rs  size.rs
