[package]
name = "serde-self-describing-formats"
version = "0.1.0"
edition = "2024"

[dependencies]
ciborium = "0.2.2"
messagepack-serde = "0.2.2"
minicbor-serde = { version = "0.6.2", features = ["std"] }
paste = "1.0.15"
pot = "3.0.1"
rmp-serde = "1.3.1"
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.149"
